--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,8 @@
 
     <dimen name="nav_header_height">200dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="recycler_title_padding">8dp</dimen>
+    <dimen name="recycler_card_height">256dp</dimen>
+    <dimen name="recycler_image_size">200dp</dimen>
 
 </resources>
