--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,7 @@
     <dimen name="recycler_title_padding">8dp</dimen>
     <dimen name="recycler_card_height">256dp</dimen>
     <dimen name="recycler_image_size">200dp</dimen>
+    <dimen name="recycler_grid_margin">4dp</dimen>
+    <dimen name="recycler_list_margin">8dp</dimen>
 
 </resources>
