--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
+        app:elevation="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
