--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content">
 
                     <android.support.v7.widget.AppCompatEditText
-                        android:id="@+id/email"
+                        android:id="@+id/username"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="32dp"
