--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF5722</color>
+    
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorAccent">#FFC107</color>
+    <color name="lightPrimary">#B2DFDB</color>
     <color name="gray_background">#ddd</color>
+    <color name="gray_hint">#88dddddd</color>
+
+    <integer-array name="colors">
+        <item>@color/colorPrimary</item>
+        <item>@color/lightPrimary</item>
+        <item>@color/colorAccent</item>
+    </integer-array>
+
 </resources>
