--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,8 @@
                 android:id="@+id/progress_smooth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="-7dp"
+                android:layout_marginBottom="-9dp"
+                card:spb_stroke_width="8dp"
                 android:indeterminate="true"
                 style="@style/GNowProgressBar"
                 android:layout_marginLeft="@dimen/login_card_margin"
