--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -25,8 +25,9 @@
                 android:id="@+id/progress_smooth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="-7dp"
+                android:layout_marginBottom="-9dp"
                 android:indeterminate="true"
+                card:spb_stroke_width="8dp"
                 style="@style/GNowProgressBar"
                 android:layout_marginLeft="@dimen/login_card_margin"
                 android:layout_marginStart="@dimen/login_card_margin"
