--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -76,7 +76,7 @@
                         android:layout_height="wrap_content">
 
                         <android.support.v7.widget.AppCompatEditText
-                            android:id="@+id/email"
+                            android:id="@+id/username"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="32dp"
@@ -142,7 +142,9 @@
             android:layout_height="wrap_content"
             card:layout_anchor="@id/card"
             card:layout_anchorGravity="bottom|end"
+            card:backgroundTint="@color/gray_fab"
             android:src="@android:drawable/ic_menu_share"
+            android:transitionName="fab"
             android:layout_marginEnd="@dimen/login_fab_margin"
             android:layout_marginRight="@dimen/login_fab_margin"/>
 
